Fix navbar height on small screens and gray buttons changing backgrounds

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -34,7 +34,7 @@ body {
 #navbar {
     box-shadow: 0px 0px 10px #474343;
     width: 100%;
-    height: 64px;
+    height: auto;
     background: rgba(255, 255, 255, .4);
     backdrop-filter: blur(10px);
     margin-bottom: 15px;
